--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- lightbox -->
+    <link rel="stylesheet" href="./css/lightbox.min.css" />
+
     <link rel="stylesheet" href="css/font-awesome.css" />
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/styles.css" />
@@ -121,156 +124,196 @@
         </div> -->
         <!-- Wedding Photos Portrait -->
         <div class="col-md-4 photo-item" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_2.jpg"
-            alt="Wedding Photo 2"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_2.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_2.jpg"
+              alt="Wedding Photo 2"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_3.jpg"
-            alt="Wedding Photo 3"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_3.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_3.jpg"
+              alt="Wedding Photo 3"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_4.jpg"
-            alt="Wedding Photo 4"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_4.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_4.jpg"
+              alt="Wedding Photo 4"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_5.jpg"
-            alt="Wedding Photo 5"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_5.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_5.jpg"
+              alt="Wedding Photo 5"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_6.jpg"
-            alt="Wedding Photo 6"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_6.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_6.jpg"
+              alt="Wedding Photo 6"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_7.jpg"
-            alt="Wedding Photo 7"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_7.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_7.jpg"
+              alt="Wedding Photo 7"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_8.jpg"
-            alt="Wedding Photo 8"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_8.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_8.jpg"
+              alt="Wedding Photo 8"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_9.jpg"
-            alt="Wedding Photo 9"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_9.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_9.jpg"
+              alt="Wedding Photo 9"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_p_10.jpg"
-            alt="Wedding Photo 10"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_p_10.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_p_10.jpg"
+              alt="Wedding Photo 10"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <!-- Wedding Photos Landscape -->
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_1.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_1.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_1.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_2.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_2.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_2.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_3.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_3.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_3.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_4.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_4.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_4.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_5.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_5.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_5.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_6.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_6.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_6.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_7.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_7.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_7.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_8.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_8.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_8.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_9.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_9.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_9.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_10.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_10.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_10.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <div class="col-md-4 photo-item mt-2" data-category="wedding">
-          <img
-            src="./images/nunti/nunta_l_11.jpg"
-            alt="Wedding Photo 11"
-            class="img-fluid"
-          />
+          <a href="./images/nunti/nunta_l_11.jpg" data-lightbox="image-wedding">
+            <img
+              src="./images/nunti/nunta_l_11.jpg"
+              alt="Wedding Photo 11"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
         <!-- Baptism Photos -->
@@ -297,5 +340,6 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
