further work on portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,8 +102,8 @@
       <button class="btn btn-primary me-2" data-category="baptism">
         Botezuri
       </button>
-      <button class="btn btn-primary me-2" data-category="school-photos">
-        Fotografii școlare
+      <button class="btn btn-primary me-2" data-category="family-photos">
+        Fotografii de familie
       </button>
       <button class="btn btn-primary me-2" data-category="christmas">
         Fotografii de Crăciun
@@ -317,19 +317,288 @@
         </div>
 
         <!-- Baptism Photos -->
+        <!-- Landscape -->
         <div class="col-md-4 photo-item" data-category="baptism">
-          <img src="baptism1.jpg" alt="Baptism Photo 1" class="img-fluid" />
+          <a
+            href="./images/botezuri/botez_l_1.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_l_1.jpg"
+              alt="Baptism Photo 1"
+              class="img-fluid"
+            />
+          </a>
         </div>
         <div class="col-md-4 photo-item" data-category="baptism">
-          <img src="baptism2.jpg" alt="Baptism Photo 2" class="img-fluid" />
+          <a
+            href="./images/botezuri/botez_l_2.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_l_2.jpg"
+              alt="Baptism Photo 2"
+              class="img-fluid"
+            />
+          </a>
         </div>
 
-        <!-- Christmas Photos -->
-        <div class="col-md-4 photo-item" data-category="christmas">
-          <img src="christmas1.jpg" alt="Christmas Photo 1" class="img-fluid" />
+        <div class="col-md-4 photo-item" data-category="baptism">
+          <a
+            href="./images/botezuri/botez_l_3.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_l_3.jpg"
+              alt="Baptism Photo 3"
+              class="img-fluid"
+            />
+          </a>
         </div>
-        <div class="col-md-4 photo-item" data-category="christmas">
-          <img src="christmas2.jpg" alt="Christmas Photo 2" class="img-fluid" />
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <a
+            href="./images/botezuri/botez_l_4.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_l_4.jpg"
+              alt="Baptism Photo 2"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <a
+            href="./images/botezuri/botez_l_5.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_l_5.jpg"
+              alt="Baptism Photo 2"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <a
+            href="./images/botezuri/botez_l_6.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_l_6.jpg"
+              alt="Baptism Photo 2"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <!-- Portrait -->
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <a
+            href="./images/botezuri/botez_p_1.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_p_1.jpg"
+              alt="Baptism Photo 2"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <a
+            href="./images/botezuri/botez_p_2.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_p_2.jpg"
+              alt="Baptism Photo 2"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="baptism">
+          <a
+            href="./images/botezuri/botez_p_3.jpg"
+            data-lightbox="image-baptism"
+          >
+            <img
+              src="./images/botezuri/botez_p_3.jpg"
+              alt="Baptism Photo 2"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <!-- Family Photos -->
+        <!-- Portraid -->
+        <div class="col-md-4 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-p-1.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-p-1.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+        <div class="col-md-4 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-p-2.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-p-2.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+        <div class="col-md-4 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-p-3.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-p-3.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+        <div class="col-md-4 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-p-4.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-p-4.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+        <div class="col-md-4 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-p-5.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-p-5.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-p-6.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-p-6.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+        <!-- Landscape -->
+        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-l-1.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-l-1.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-l-2.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-l-2.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-l-3.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-l-3.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-l-4.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-l-4.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-l-5.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-l-5.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-l-6.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-l-6.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="family-photos">
+          <a
+            href="./images/fotografii-de-familie/familie-l-7.jpg"
+            data-lightbox="family-photos"
+          >
+            <img
+              src="./images/fotografii-de-familie/familie-l-7.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
         </div>
       </div>
     </div>
