further work on portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
       <button class="btn btn-primary me-2" data-category="christmas">
         Fotografii de Crăciun
       </button>
-      <button class="btn btn-primary me-2" data-category="christmas">
+      <button class="btn btn-primary me-2" data-category="easter">
         Fotografii de Paște
       </button>
     </div>
@@ -595,6 +595,476 @@
           >
             <img
               src="./images/fotografii-de-familie/familie-l-7.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <!-- Christmas Photos -->
+        <!-- Landscape -->
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-1.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-1.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-2.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-2.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-3.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-3.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-4.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-4.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-5.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-5.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-6.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-6.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-7.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-7.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-8.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-8.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-9.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-9.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-10.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-10.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-11.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-11.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-12.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-12.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-13.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-13.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-14.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-14.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-15.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-15.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-16.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-16.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-17.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-17.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-l-18.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-l-18.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+        <!-- Portrait -->
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-1.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-1.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-2.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-2.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-3.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-3.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-4.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-4.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-5.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-5.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-6.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-6.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-7.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-7.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-8.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-8.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-9.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-9.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-10.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-10.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-11.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-11.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-12.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-12.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-13.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-13.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-14.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-14.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-15.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-15.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-16.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-16.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-17.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-17.jpg"
+              alt="Christmas Photo 1"
+              class="img-fluid"
+            />
+          </a>
+        </div>
+
+        <div class="col-md-4 mt-2 photo-item" data-category="christmas">
+          <a
+            href="./images/craciun/craciun-p-18.jpg"
+            data-lightbox="christmas-photos"
+          >
+            <img
+              src="./images/craciun/craciun-p-18.jpg"
               alt="Christmas Photo 1"
               class="img-fluid"
             />
